--- a/Voicequalitycode.ipynb
+++ b/Voicequalitycode.ipynb
@@ -112,9 +112,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'list.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# get voice ids from string list\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(\u001b[39m'\u001b[39;49m\u001b[39mlist.txt\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m'\u001b[39;49m\u001b[39mr\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m      3\u001b[0m     voice_ids \u001b[39m=\u001b[39m f\u001b[39m.\u001b[39mread()\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m)[:\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\n",
+      "File \u001b[1;32mc:\\Users\\xulyr\\anaconda3\\envs\\librosa\\lib\\site-packages\\IPython\\core\\interactiveshell.py:284\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    277\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[0;32m    278\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    279\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    280\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    281\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    282\u001b[0m     )\n\u001b[1;32m--> 284\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'list.txt'"
+     ]
+    }
+   ],
    "source": [
     "# get voice ids from string list\n",
     "with open('list.txt','r') as f:\n",
@@ -195,185 +208,6 @@
     "for i in praat_:\n",
     "    h1h2.append(ave(i)[0])\n",
     "    ccp.append(ave(i)[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[5.800467936021146,\n",
-       " 3.0337338245201275,\n",
-       " 8.786700596414692,\n",
-       " 16.285576296987035,\n",
-       " -23.981543264665692,\n",
-       " -27.894686336238202,\n",
-       " 5.6321855159946175,\n",
-       " 4.363660153128127,\n",
-       " 22.607481045692232,\n",
-       " 28.760512967879365,\n",
-       " 10.984324836081182,\n",
-       " 13.831806989611083,\n",
-       " 7.971461083193917,\n",
-       " 6.470620422953677,\n",
-       " 3.385561038480278,\n",
-       " -1.3531138989037328,\n",
-       " 0.8685547162544525,\n",
-       " 5.057887030705892,\n",
-       " 6.234873990028638,\n",
-       " 4.7903824979285545,\n",
-       " 6.445838917663451,\n",
-       " 10.248592894568683,\n",
-       " 26.140668953323612,\n",
-       " 11.197070495090028,\n",
-       " 2.674057055580511,\n",
-       " 0.42755316796552656,\n",
-       " 4.472886321172616,\n",
-       " 4.218627653061628,\n",
-       " 10.93333987575273,\n",
-       " 15.601885059456922,\n",
-       " -0.7412157917509634,\n",
-       " -5.286597364466974,\n",
-       " 3.6775952062803636,\n",
-       " 9.472585322509815,\n",
-       " 8.32739073263135,\n",
-       " 10.265929511924838,\n",
-       " 7.760448741135796,\n",
-       " 5.5830673854279835,\n",
-       " 14.976627131969716,\n",
-       " 13.012276676529435,\n",
-       " 8.832469134674938,\n",
-       " 2.8715423548005585,\n",
-       " 2.993544593796687,\n",
-       " 1.5261682555852245,\n",
-       " 2.9014483259933224,\n",
-       " 4.514116772132804,\n",
-       " 0.1398548113306472,\n",
-       " -2.8337111203212606,\n",
-       " -0.5654964604288489,\n",
-       " -6.249052022452032,\n",
-       " 3.337078984528709,\n",
-       " 11.822191189268295,\n",
-       " 5.741190944610827,\n",
-       " 5.185061402161099,\n",
-       " 13.31735070110305,\n",
-       " 8.06699494036624,\n",
-       " -16.3064186198824,\n",
-       " 37.833420640895675,\n",
-       " -22.663500072354402,\n",
-       " -24.36208062425616,\n",
-       " 2.3085553571354946,\n",
-       " 1.4419951237180275,\n",
-       " 11.907115807313918,\n",
-       " 8.936129791235743,\n",
-       " 2.369738174585196,\n",
-       " 4.882358667851393,\n",
-       " 7.14761036039378,\n",
-       " 4.537394213341965,\n",
-       " -27.938697098840418,\n",
-       " 4.453126418578835,\n",
-       " 5.414829343613622,\n",
-       " -6.808043015843594,\n",
-       " 8.922955859567375,\n",
-       " 4.312789147450881,\n",
-       " 5.744810743954955,\n",
-       " 3.045984451574865,\n",
-       " 10.240442826721315,\n",
-       " 13.877618953953247,\n",
-       " 4.876465662050795,\n",
-       " -1.125805882923933,\n",
-       " -0.14004919961203732,\n",
-       " 8.61007400402347,\n",
-       " 8.58804645245064,\n",
-       " 3.588771249373347,\n",
-       " 12.173880408638375,\n",
-       " 10.085342148672002,\n",
-       " 11.225789955882723,\n",
-       " 10.766701654426335,\n",
-       " 2.470335053467364,\n",
-       " -2.256014110560182,\n",
-       " 9.653224828437741,\n",
-       " 9.673006998128274,\n",
-       " 6.471272133775661,\n",
-       " 4.945822813579999,\n",
-       " 18.943768818215965,\n",
-       " 16.559118015632084,\n",
-       " 4.113796529465572,\n",
-       " 4.6897299121275,\n",
-       " 10.09258004644711,\n",
-       " 10.11822631690535,\n",
-       " 8.644781057704291,\n",
-       " 7.698200633497738,\n",
-       " 6.829825715078739,\n",
-       " 2.323453446373512,\n",
-       " 3.5319947962554514,\n",
-       " -0.3762237642104335,\n",
-       " 11.311704797513961,\n",
-       " 16.163403749348888,\n",
-       " 10.128521140075126,\n",
-       " 13.688109304043634,\n",
-       " 12.071938225945823,\n",
-       " 23.11755838936524,\n",
-       " 7.845185777132773,\n",
-       " 8.16985974982448,\n",
-       " 6.336686365928601,\n",
-       " 20.157008175722137,\n",
-       " -1.1281879119499254,\n",
-       " 26.772214536934598,\n",
-       " 5.6111683245038115,\n",
-       " 11.10157784584022,\n",
-       " 6.3386875732651236,\n",
-       " 15.236569010216215,\n",
-       " 4.110580751276089,\n",
-       " 24.189375128912804,\n",
-       " 0.8956915048793116,\n",
-       " -3.7597346154482003,\n",
-       " -1.5440416530372474,\n",
-       " -4.197101370370222,\n",
-       " 9.561870126603589,\n",
-       " 12.22126156495789,\n",
-       " 3.5947107153754314,\n",
-       " 6.562052341711242,\n",
-       " 6.909952772893724,\n",
-       " 12.274489453721108,\n",
-       " 8.521946945367894,\n",
-       " 3.645529851081995,\n",
-       " 9.13949365451664,\n",
-       " 4.202388770180075,\n",
-       " 6.4155291284801335,\n",
-       " 4.2589755519972865,\n",
-       " 9.084621454725772,\n",
-       " 16.352446736555653,\n",
-       " 12.172310486379454,\n",
-       " 12.405651457376413,\n",
-       " 7.457825498910258,\n",
-       " 6.575260346839142,\n",
-       " 5.932878923231987,\n",
-       " 6.867345567233616,\n",
-       " 10.939519114399541,\n",
-       " 5.539932363589294,\n",
-       " 15.706368497875012,\n",
-       " 16.286086904344316,\n",
-       " 10.521195217152474,\n",
-       " 6.6567268548479115,\n",
-       " 14.660208675291743,\n",
-       " 5.517700474015412,\n",
-       " 4.393529152830437,\n",
-       " -1.1035445788025902,\n",
-       " 8.428645275982209,\n",
-       " 8.5561216406999]"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "h1h2"
    ]
   },
   {
@@ -1670,20 +1504,6 @@
     "clustering.fit(np.array(ddpJ).reshape(-1, 1))\n",
     "clustering.labels_"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
